WP-8601 breadcrum and title alignment issues fixes with voices list mobile/tablet font size changes

--- a/css/style.css
+++ b/css/style.css
@@ -1871,7 +1871,7 @@ del {
   display: block;
   margin: 0 auto;
   max-width: 1170px;
-  padding-left: 80px;
+  padding-left: 0px;
 }
 @media (max-width: 62.5em) {
   .no-sidebars.panels-layout-gsb-full-bleed-page .breadcrumb {
@@ -1879,7 +1879,7 @@ del {
   }
 }
 .no-sidebars.panels-layout-gsb-full-bleed-page h1.title {
-  margin-left: 80px;
+  margin-left: 0px;
 }
 @media (max-width: 62.5em) {
   .no-sidebars.panels-layout-gsb-full-bleed-page h1.title {
