--- a/sass/partials/base/05-layouts/_layouts.sass
+++ b/sass/partials/base/05-layouts/_layouts.sass
@@ -205,11 +205,11 @@
     display: block
     margin: 0 auto
     max-width: 1170px
-    padding-left: 80px
+    padding-left: 0px
     +breakpoint(1000px max-width)
       padding-left: 0
   h1.title
-    margin-left: 80px
+    margin-left: 0px
     +breakpoint(1000px max-width)
       margin-left: 0
 
